@startuml

title __ACTIVITY's Class Diagram__\n

  namespace com.example.paperhelper {
    namespace view.activity {
      class com.example.paperhelper.view.activity.MainActivity {
          ~ bottom_tool : RadioGroup
          ~ searchPaperRb : RadioButton
          ~ viewPager : QMUIViewPager
          - checkedChangeListener : OnCheckedChangeListener
          - fpAdapter : FragmentPagerAdapter
          - fragmentList : List<Fragment>
          - pageChangeListener : OnPageChangeListener
          # onCreate()
          - initFragment()
          - initFragmentPagerAdapter()
          - initView()
      }
    }
  }
  

  namespace com.example.paperhelper {
    namespace view.activity {
      class com.example.paperhelper.view.activity.PdfAndNoteActivity {
          - file : File
          - topBar : QMUITopBar
          # onCreate()
          - addFragment()
          - getFile()
          - initFragment()
          - initView()
          - setTopBar()
      }
    }
  }
  

  com.example.paperhelper.view.activity.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.paperhelper.view.activity.MainActivity o-- com.example.paperhelper.view.fragment.PaperLibFragment : paperLibFragment
  com.example.paperhelper.view.activity.MainActivity o-- com.example.paperhelper.view.fragment.PersonalFragment : personalFragment
  com.example.paperhelper.view.activity.MainActivity o-- com.example.paperhelper.view.fragment.ScheduleFragment : scheduleFragment
  com.example.paperhelper.view.activity.MainActivity o-- com.example.paperhelper.view.fragment.SearchPaperFragment : searchPaperFragment
  com.example.paperhelper.view.activity.PdfAndNoteActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
